[tool.poetry]
name = "quest-bot"
version = "0.1.0"
description = "Edventure bot for friends"
authors = []
readme = "README.md"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.11,<3.15"  # или просто "^3.11"
aiogram = "^3.23.0"
redis = ">=7.1.0,<8.0.0"
dotenv = "^0.9.9"
